# ZSearch

./: .gitignore  CMakeLists.txt  README.md  test.sh  typedefs.h
articles/: ABC.txt  IfIWereToFallInLove.txt  Little.txt  WhatCanIHoldYouWith.txt  WhenYouAreOld.test  meta
articles/long-story/: Alice’s Adventures in Wonderland.txt
articles/single-jsons/: css.json  glossary.json  webapp.json
articles/tmp/: ooo.txt
articles/tpch-json/: tpch.json  tpch.sh
cmdapi/: main.cpp
core/: Database.h  Document.h  DocumentInfo.h  DynamicArray.h  Key.h  Term.h  Trie.h  Value.h  database.h  document.h  indexer.h  term.h  testCore.cpp
daemon/: Daemon.h  testDaemon.cpp  testDaemonLightly.cpp
executor/: AggregateFunction.h  CompareFunction.h  ConjunctionTree.h  Executor.h  HavingExecutor.h  LimitExecutor.h  Predicate.h  ScoreExecutor.h  TermsExecutor.h  testExecutor.cpp
extractor/: ExtractResult.h  ExtractUtils.h  Extractor.h  extractor.h  testExtractor.cpp
html/: app.html  indexmanager.html  intro.html  login.html  login.js  notfound.html  search.html
httpapi/: DocumentHTTPHandler.h  ErrorHandler.h  HTTPHandler.h  HTTPHandlerFactory.h  IndexHTTPHandler.h  SearchHTTPHandler.h  StatisticsHTTPHandler.h  UserHTTPHandler.h  main.cpp
indexer/: Indexer.h  indexer.h
queryparser/: ASTQuery.h  CommonParsers.h  ExpressionListParsers.h  IAST.h  IParser.h  Lexer.h  Parser.h  ParserQuery.h  Pos.h  Query.g4  Token.h  queryparser.h  testLexer.cpp  testParser.cpp
queryparser/grammars/: Query.g4  exampleActions.js  input.txt
relational/: Column.h  ColumnTypeAndData.h  Expression.h  Function.h  PlanNode.h  Rows.h  Table.h  Value.h  testRelational.cpp
searcher/: QueryStatistics.h  Searcher.h  searcher.h  testSearcher.cpp
storage/: Reader.h  reader.h  testStorage.cpp
third-party-tests/: testJson.cpp  testPoco.cpp  testXapianIndexer.cpp  testXapianSearcher.cpp
utils/: ContainerUtils.h  DynamicBitSet.h  FileSystemUtils.h  JsonUtils.h  SerializeUtils.h  SortUtils.h  StringUtils.h  TimeUtils.h  serializerUtils.h  stringUtils.h  testUtils.cpp
